--- a/downloads.html
+++ b/downloads.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://cyndycode.github.io/downloads.html">
+    <meta http-equiv="refresh" content="0; url=https://cymbycode.github.io/downloads.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://cyndycode.github.io/downloads.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://cymbycode.github.io/downloads.html">click here</a>.</p>
 </body>
 </html>
